tests/lean/matchErrorLocation.lean.expected.out
matchErrorLocation.lean:5:10: error: type mismatch
  h he
has type
  False
but is expected to have type
  α
failed to synthesize instance
  CoeT False (h he) α
